# Personal_Sub2

./: .dockerignore  .gitignore  .goreleaser.simple.yaml  .goreleaser.yaml  DEV_GUIDE.md  Dockerfile  Dockerfile.goreleaser  README.md  README_CN.md  README_JA.md
.github/workflows/: publish-intent-classifier-ghcr.yml  publish-personal-ghcr.yml  release.yml
backend/: go.sum
backend/ent/: affiliaterebatejob.go  affiliaterebatejob_create.go  affiliaterebatejob_delete.go  affiliaterebatejob_query.go  affiliaterebatejob_update.go  apikey.go  apikey_create.go  apikey_query.go  apikey_update.go  client.go  (+79 more)
deploy/: .env.example  APPLE_CONTAINER.md  DOCKER.md  Dockerfile  INTENT_CLASSIFIER.md  README.md  apple-container.sh  config.example.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.standalone.yml  docker-compose.yml  docker-deploy.sh  install.sh  intent-classifier.env.example  intent-classifier.service  sub2api.service
docs/: ADMIN_PAYMENT_INTEGRATION_API.md  PAYMENT.md  PAYMENT_CN.md
frontend/: pnpm-lock.yaml
services/intent-classifier/: .dockerignore  .gitignore  Dockerfile  MODEL_PACKAGE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/intent-classifier/src/intent_classifier/: __init__.py  app.py  cli.py  errors.py  installer.py  logging_config.py  manager.py  model_package.py  package_schema.py  schemas.py  settings.py  state_store.py
services/intent-classifier/tests/: conftest.py  test_admin_state.py  test_api.py  test_cli.py  test_installer.py  test_model_package.py  test_settings.py  test_state_store.py
(+556 files in other folders)
