[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sub2api-intent-classifier"
version = "0.1.0"
description = "Local ONNX intent classifier for Sub2API secondary review"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<2.4",
  "onnxruntime>=1.20,<2",
  "pydantic>=2.10,<3",
  "tokenizers>=0.21,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "onnx>=1.17,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
intent-classifier = "intent_classifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
